tests/rpm-pkgs/libreport-2.15.2-6.fc35/output-exp@valgrind/scan-results.err
Error: COMPILER_WARNING:
libreport-2.15.2/tests/testsuite.dir/016/configuration_files.at:447: warning: the use of `tmpnam' is dangerous, better use `mkstemp'

Error: COMPILER_WARNING:
libreport-2.15.2/tests/testsuite.dir/065/dump_dir.at:590: warning: the use of `tmpnam' is dangerous, better use `mkstemp'

Error: VALGRIND_WARNING:
libreport-2.15.2/tests/testsuite.dir/074/.libs/dd_create_archive: note: while executing process 28604
libreport-2.15.2/tests/testsuite.dir/074/dump_dir.at:1330: warning[Leak_DefinitelyLost]: 3,440 (2,536 direct, 904 indirect) bytes in 1 blocks are definitely lost in loss record 246 of 249
/usr/lib64/libarchive.so.13.5.3: note: called from archive_read_new()
libreport-2.15.2/tests/testsuite.dir/074/dump_dir.at:1330: note: called from verify_archive()
libreport-2.15.2/tests/testsuite.dir/074/dump_dir.at:1535: note: called from main()
